<resources>
    <string name="app_name">Emg App</string>
    <string name="app_version">0.9.8</string>

    <string name="status_not_connected">Not connected</string>
    <string name="menu_main_connect">Connect</string>
    <string name="menu_main_disconnect">Disconnect</string>
    <string name="menu_main_export">Export</string>
    <string name="menu_main_reset">Reset</string>
    <string name="menu_main_client_config">Client Config</string>
    <string name="menu_main_sampling_frequency">Sampling Frequency</string>
    <string name="menu_main_settings">Settings</string>
    <string name="toolbar_tools">Tools</string>
    <string name="toolbar_analysis">Analysis</string>
    <string name="toolbar_filter">Filter</string>
    <string name="toolbar_client">Client</string>
    <string name="menu_analysis_fft">Fast Fourier Transform</string>
    <string name="menu_analysis_power_spectrum">Power spectrum</string>
    <string name="enter">Enter</string>
    <string name="network_ip_address">IP address</string>
    <string name="network_port">Port</string>
    <string name="apply">APPLY</string>
    <string name="frequency_analysis_fft">Fast Fourier Transform</string>
    <string name="frequency_analysis_spectrum">Power Spectrum</string>
    <string name="settings_category_about">About</string>
    <string name="settings_about_developer_title">Developer</string>
    <string name="settings_about_developer_summary">Martin Macheiner &amp; Markus Altenhuber</string>
    <string name="settings_about_framework_version_title">Emg Framework Version</string>
    <string name="settings_about_version_title">Version</string>
    <string name="label_settings">Settings</string>
    <string name="menu_main_enable_visual_view">Enable Visual View</string>
    <string name="tool_conconi_title">Conconi Test</string>
    <string name="tool_muscle_fatigue_title">Muscle fatigue</string>
    <string name="tool_peaks_title">Peak detection</string>
    <string name="tool_peaks_title_detected">Peak detection (%d)</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="tool_conconi_visualization">Visualization</string>
    <string name="tool_conconi_round_data">Round data</string>
    <string name="tool_conconi_start">Press start</string>
    <string name="stop">Stop</string>
    <string name="tool_conconi_test_finished">Test finished!</string>
    <string name="dialog_pick_file">Pick a file</string>
    <string name="tool_conconi_round_data_speed">Speed\n\n%s km/h</string>
    <string name="tool_conconi_round_data_rms">RMS\n\n%s</string>
    <string name="tool_conconi_round_data_peaks">Peaks\n\n%d</string>
    <string name="bluetooth_mac">Remote bluetooth MAC</string>
    <string name="uuid">UUID</string>
    <string name="parameter">Parameter</string>
    <string name="compute">Compute</string>
</resources>
