<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_client_config_network_txt_ip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/network_ip_address"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_client_config_network_txt_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/network_port"
            android:imeOptions="actionDone"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/fragment_client_config_network_btn_apply"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:text="@string/apply"
        android:textColor="@color/colorAccent" />

</LinearLayout>