<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/fragment_main_txt_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:textColor="#fff"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_weight="0.001"
        android:background="@color/iconColor" />

    <ScrollView
        android:id="@+id/fragment_main_scroll_view_console"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0.279">

        <TextView
            android:id="@+id/fragment_main_txt_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textSize="15sp" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@color/lightBackground"
        android:orientation="horizontal"
        android:elevation="8dp"
        android:weightSum="1"
        android:clipToPadding="false"
        tools:ignore="NestedWeights">

        <Button
            android:id="@+id/fragment_main_btn_clients"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/ic_client_network"
            android:text="@string/toolbar_client" />

        <Button
            android:id="@+id/fragment_main_btn_filter"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/ic_toolbar_filter"
            android:text="@string/toolbar_filter" />

        <Button
            android:id="@+id/fragment_main_btn_analysis"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/ic_toolbar_analysis"
            android:text="@string/toolbar_analysis" />

        <Button
            android:id="@+id/fragment_main_btn_tools"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:drawableTop="@drawable/ic_toolbar_tools"
            android:text="@string/toolbar_tools" />
    </LinearLayout>

</LinearLayout>